# building-dynamiclibrary

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  building-dynamiclibrary.sln  dynamiclibrary.nuspec  dynamiclibrary.targets  nuget.config
.github/workflows/: build.yml  cmake.yml  dockercomposebuild.yml
clientconsumingnuget/: clientconsumingnuget.cpp  clientconsumingnuget.vcxproj  clientconsumingnuget.vcxproj.filters  packages.config
clientdynamiclibrary/: CMakeLists.txt  DynamicLibraryManager.cpp  DynamicLibraryManager.h  IDynamicLibraryManager.h  LibrayTypeDefinitions.h  clientdynamiclibrary.cpp  clientdynamiclibrary.vcxproj  clientdynamiclibrary.vcxproj.filters  main.cpp
dynamiclibrary/: Add.cpp  CMakeLists.txt  Divide.cpp  IDynamicLibraryApi.h  Multiply.cpp  Observer.cpp  Observer.h  ObserverApi.cpp  ObserverApi.h  ObserverApiImplementation.cpp  Operation.cpp  Operation.h  Operations.cpp  Operations.h  OperationsApi.cpp  OperationsApi.h  OperationsApiImplementation.cpp  README.md  Subject.cpp  Subject.h  Subtract.cpp  dllmain.cpp  dynamiclibrary.def  dynamiclibrary.vcxproj  dynamiclibrary.vcxproj.filters  framework.h  pch.h
dynamiclibrary.unit-tests/: dynamiclibrary.unit-tests.vcxproj
logger/: logger.cpp  logger.h
